updated site to use poppins & corrected font sizes to make docs more legible

--- a/app/assets/stylesheets/markdown.css
+++ b/app/assets/stylesheets/markdown.css
@@ -1,10 +1,12 @@
 .markdown-content {
     line-height: 1.5;
-    color: #dedae3;
+    font-size: 0.75rem;
+    font-weight: 400;
+    color: #f1eef5;
 }
   
 .markdown-content h1 {
-    font-size: 2.5rem;
+    font-size: 2em;
     font-weight: bold;
     color: #FFFFFF;
     margin-bottom: 1.8rem;
@@ -13,16 +15,16 @@
 }
 
 .markdown-content h2 {
-    font-size: 2rem;
-    font-weight: bold;
+    font-size: 1.75em;
+    font-weight: 600;
     color: #FFFFFF;
     margin-top: 1.75rem;
     margin-bottom: 1.25rem;
 }
 
 .markdown-content h3 {
-    font-size: 1.75em; 
-    font-weight: bold;
+    font-size: 1.5em; 
+    font-weight: 600;
     color: #FFFFFF;
     margin-top: 1.5rem;
     margin-bottom: 1rem;
@@ -36,14 +38,17 @@
 }
 
 .markdown-content p {
-    font-size: large;
+    font-size: 1rem;
     margin-bottom: 1rem;
+    font-family: "Poppins", sans-serif;
 }
   
 .markdown-content ul {
+    color: #ffffff;
     list-style-type: disc;
     margin-left: 1.5rem;
     margin-bottom: 1rem;
+    margin-top: 1rem;
     line-height: 2;
     font-size: 1.1rem;
     font-weight: 550;
@@ -53,6 +58,7 @@
     list-style-type: decimal;
     margin-left: 1.5rem;
     margin-bottom: 1rem;
+    margin-top: 1rem;
     line-height: 2;
     font-size: 1.1rem;
     font-weight: 550;
@@ -65,6 +71,50 @@
     font-style: italic;
 }
 
+.markdown-content a {
+    color: #f583e4; 
+    text-decoration: underline;
+    font-weight: bold; 
+    word-break: break-word; 
+}
+
+.markdown-content a:hover {
+    color: #f1b6e8; 
+    text-decoration: underline;
+    font-weight: extra-bold;
+}
+
+.markdown-content strong {
+    font-weight: 650;
+    color: #86cfe5;
+}
+
+.markdown-content pre {
+    background-color: #3c3672;
+    color: #ffffff;
+    padding: 1rem; 
+    border-radius: 8px; 
+    overflow-x: auto; 
+  }
+  
+.markdown-content code {
+    background-color: #3c3672; 
+    color: #ffffff;
+    font-size: 0.9rem;
+    padding: 0.2rem 0.4rem; 
+    border-radius: 2;
+  }
+
+
+.project-img img {
+    width: 800px;
+}
+
+/*
+
+div styling, probably don't need to touch this part.
+
+*/
 div.markdown li {
     display: list-item;
 }
@@ -93,40 +143,3 @@ div.markdown p:last-child {
     padding-bottom: 5rem;
 }
 
-.markdown-content a {
-    color: #f583e4; 
-    text-decoration: underline;
-    font-weight: bold; 
-    word-break: break-word; 
-}
-
-.markdown-content a:hover {
-    color: #f1b6e8; 
-    text-decoration: underline;
-    font-weight: extra-bold;
-}
-
-.markdown-content strong {
-    font-weight: bold;
-    color: #86cfe5;
-}
-
-.markdown-content pre {
-    background-color: #3c3672;
-    color: #ffffff;
-    padding: 1rem; 
-    border-radius: 8px; 
-    overflow-x: auto; 
-  }
-  
-.markdown-content code {
-    background-color: #3c3672; 
-    color: #ffffff;
-    padding: 0.2rem 0.4rem; 
-    border-radius: 4px;
-  }
-
-
-.project-img img {
-    width: 800px;
-}
